Integrated task5 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -13,7 +13,7 @@
       <li onclick="openTask2()">Kuku Kube</li>
       <li onclick="openTask3()">Tic Tac Toe</li>
       <li onclick="openTask4()">Pagination and Sorting</li>
-      <li>Task5</li>
+      <li onclick="openTask5()">Attendance Report and Result</li>
       <li>Task6</li>
       <li>Task7</li>
       <li>Task8</li>
@@ -48,6 +48,10 @@
 
       const openTask4 = () => {
         window.location.href = "/task4/users/1";
+      };
+
+      const openTask5 = () => {
+        window.location.href = "/task5/result";
       };
     </script>
   </body>
