Integrated Task6 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -14,7 +14,7 @@
       <li onclick="openTask3()">Tic Tac Toe</li>
       <li onclick="openTask4()">Pagination and Sorting</li>
       <li onclick="openTask5()">Attendance Report and Result</li>
-      <li>Task6</li>
+      <li onclick="openTask6()">Dynamic Grid</li>
       <li>Task7</li>
       <li>Task8</li>
       <li>Task9</li>
@@ -52,6 +52,10 @@
 
       const openTask5 = () => {
         window.location.href = "/task5/result";
+      };
+
+      const openTask6 = () => {
+        window.location.href = "/task6/query";
       };
     </script>
   </body>
