Integrated Task7 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -15,7 +15,7 @@
       <li onclick="openTask4()">Pagination and Sorting</li>
       <li onclick="openTask5()">Attendance Report and Result</li>
       <li onclick="openTask6()">Dynamic Grid</li>
-      <li>Task7</li>
+      <li onclick="openTask7()">Delimeter Search</li>
       <li>Task8</li>
       <li>Task9</li>
       <li>Task10</li>
@@ -56,6 +56,10 @@
 
       const openTask6 = () => {
         window.location.href = "/task6/query";
+      };
+
+      const openTask7 = () => {
+        window.location.href = "/task7";
       };
     </script>
   </body>
