Integrated Task8 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -16,7 +16,7 @@
       <li onclick="openTask5()">Attendance Report and Result</li>
       <li onclick="openTask6()">Dynamic Grid</li>
       <li onclick="openTask7()">Delimeter Search</li>
-      <li>Task8</li>
+      <li onclick="openTask8()">Job Application Form</li>
       <li>Task9</li>
       <li>Task10</li>
       <li>Task11</li>
@@ -60,6 +60,10 @@
 
       const openTask7 = () => {
         window.location.href = "/task7";
+      };
+
+      const openTask8 = () => {
+        window.location.href = "/task8/showUsers";
       };
     </script>
   </body>
