Integrated task9 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -17,7 +17,7 @@
       <li onclick="openTask6()">Dynamic Grid</li>
       <li onclick="openTask7()">Delimeter Search</li>
       <li onclick="openTask8()">Job Application Form</li>
-      <li>Task9</li>
+      <li onclick="openTask9()">Job Application Form(Using Ajax)</li>
       <li>Task10</li>
       <li>Task11</li>
     </ul>
@@ -64,6 +64,10 @@
 
       const openTask8 = () => {
         window.location.href = "/task8/showUsers";
+      };
+
+      const openTask9 = () => {
+        window.location.href = "/task9/showUsers";
       };
     </script>
   </body>
