Integrated Task10 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -18,7 +18,7 @@
       <li onclick="openTask7()">Delimeter Search</li>
       <li onclick="openTask8()">Job Application Form</li>
       <li onclick="openTask9()">Job Application Form(Using Ajax)</li>
-      <li>Task10</li>
+      <li onclick="openTask10()">JSON Placeholder API use</li>
       <li>Task11</li>
     </ul>
     <script>
@@ -68,6 +68,10 @@
 
       const openTask9 = () => {
         window.location.href = "/task9/showUsers";
+      };
+
+      const openTask10 = () => {
+        window.location.href = "/task10/posts";
       };
     </script>
   </body>
