Integrated task11 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -19,7 +19,7 @@
       <li onclick="openTask8()">Job Application Form</li>
       <li onclick="openTask9()">Job Application Form(Using Ajax)</li>
       <li onclick="openTask10()">JSON Placeholder API use</li>
-      <li>Task11</li>
+      <li onclick="openTask11()">Date/Time Converter</li>
     </ul>
     <script>
       const logout = async () => {
@@ -72,6 +72,10 @@
 
       const openTask10 = () => {
         window.location.href = "/task10/posts";
+      };
+
+      const openTask11 = () => {
+        window.location.href = "/task11";
       };
     </script>
   </body>
