Integrated task12 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -20,6 +20,7 @@
       <li onclick="openTask9()">Job Application Form(Using Ajax)</li>
       <li onclick="openTask10()">JSON Placeholder API use</li>
       <li onclick="openTask11()">Date/Time Converter</li>
+      <li onclick="openTask12()">Generate Input Field</li>
     </ul>
     <script>
       const logout = async () => {
@@ -76,6 +77,10 @@
 
       const openTask11 = () => {
         window.location.href = "/task11";
+      };
+
+      const openTask12 = () => {
+        window.location.href = "/task12";
       };
     </script>
   </body>
