Integrated task13 in dashboard

--- a/views/task16Views/dashboard.ejs
+++ b/views/task16Views/dashboard.ejs
@@ -21,6 +21,7 @@
       <li onclick="openTask10()">JSON Placeholder API use</li>
       <li onclick="openTask11()">Date/Time Converter</li>
       <li onclick="openTask12()">Generate Input Field</li>
+      <li onclick="openTask13()">Dynamic State-City</li>
     </ul>
     <script>
       const logout = async () => {
@@ -81,6 +82,10 @@
 
       const openTask12 = () => {
         window.location.href = "/task12";
+      };
+
+      const openTask13 = () => {
+        window.location.href = "/task13/form";
       };
     </script>
   </body>
