--- a/views/task16Views/changePassword.ejs
+++ b/views/task16Views/changePassword.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Change Password</title>
-    <link rel="stylesheet" href="./task16Views/styles.css" />
+    <link rel="stylesheet" href="/task16Views/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
@@ -48,6 +48,6 @@
       <br />
       <span class="change-password-button" onclick="changePassword()">Change Password</span>
     </div>
-    <script src="./task16Views/script.js"></script>
+    <script src="/task16Views/script.js"></script>
   </body>
 </html>
