--- a/views/task16Views/login.ejs
+++ b/views/task16Views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="./task16Views/styles.css" />
+    <link rel="stylesheet" href="/task16Views/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
@@ -25,6 +25,6 @@
       <p class="forgot-password"><a href="/forgotPassword">Forgot password?</a></p>
       <p class="new-user">New user?<a href="/register">Register</a></p>
     </form>
-    <script src="./task16Views/script.js"></script>
+    <script src="/task16Views/script.js"></script>
   </body>
 </html>
