changed name of task4 folders

--- a/views/paginationViews/users.ejs
+++ b/views/paginationViews/users.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Users</title>
-    <link rel="stylesheet" href="/task4Views/styles.css" />
+    <link rel="stylesheet" href="/paginationViews/styles.css" />
   </head>
   <body>
     <% if(order!==false){ %>
