--- a/views/attendanceReportViews/users.ejs
+++ b/views/attendanceReportViews/users.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Users</title>
-    <link rel="stylesheet" href="/task5Views/styles.css" />
+    <link rel="stylesheet" href="/attendanceReportViews/styles.css" />
   </head>
   <body>
     <h2>Vansh Gandhi: 24DEV071</h2>
