Changed name of task6 folders

--- a/views/dynamicGridViews/grid.ejs
+++ b/views/dynamicGridViews/grid.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic Grid</title>
-    <link rel="stylesheet" href="/task6Views/styles.css" />
+    <link rel="stylesheet" href="/dynamicGridViews/styles.css" />
   </head>
   <body>
     <p><b>Available Tables:</b> student_master_27_feb, exam_master_27_feb, subject_master_27_feb, attendance_27_feb, result_27_feb</p> <br><br>
