Changed name of task7 folders

--- a/views/delimeterSearchViews/students.ejs
+++ b/views/delimeterSearchViews/students.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Students</title>
-    <link rel="stylesheet" href="/task7Views/styles.css">
+    <link rel="stylesheet" href="/delimeterSearchViews/styles.css">
   </head>
   <body>
     <form action="/task7" method="post">
