Changed name of task8 folders

--- a/views/jobFormViews/form.ejs
+++ b/views/jobFormViews/form.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form 1</title>
-    <link rel="stylesheet" href="/task8Views/styles.css">
+    <link rel="stylesheet" href="/jobFormViews/styles.css">
 </head>
 
 <body>
@@ -319,7 +319,7 @@
         <%} else {%>
             <button type="submit">Submit</button>
             <%}%>
-        <script src="/task8Views/validation.js"></script>
+        <script src="/jobFormViews/validation.js"></script>
         <script>
             const addEducationField = () =>{
                 if(document.getElementById("fieldUnderflowError")) {
