--- a/views/jobFormViews/users.ejs
+++ b/views/jobFormViews/users.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Users</title>
-    <link rel="stylesheet" href="/task8Views/styles.css" />
+    <link rel="stylesheet" href="/jobFormViews/styles.css" />
   </head>
   <body>
     <table>
