--- a/views/jobFormAjaxViews/users.ejs
+++ b/views/jobFormAjaxViews/users.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Users</title>
-    <link rel="stylesheet" href="/task9Views/styles.css" />
+    <link rel="stylesheet" href="/jobFormAjaxViews/styles.css" />
   </head>
   <body>
     <table>
@@ -34,7 +34,7 @@
           <td><%=element.gender%></td>
           <td>
             <a href="/task9/form/<%=element.application_id%>"
-              ><span class="view-details">View Details</span></a
+              ><span class="view-details">Update Details</span></a
             >
           </td>
         </tr>
