Changed name of task11 folders

--- a/views/dateConverterViews/home.ejs
+++ b/views/dateConverterViews/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Converter</title>
-    <link rel="stylesheet" href="/task11Views/styles.css" />
+    <link rel="stylesheet" href="/dateConverterViews/styles.css" />
   </head>
   <body>
     <div id="div">
@@ -21,6 +21,6 @@
     <br />
     <br />
     <span class="button" onclick="convertTime()">Submit</span>
-    <script src="/task11Views/script.js"></script>
+    <script src="/dateConverterViews/script.js"></script>
   </body>
 </html>
