Changed name of task13 folders

--- a/views/dynamicCityViews/form.ejs
+++ b/views/dynamicCityViews/form.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>State-City</title>
-    <link rel="stylesheet" href="/task13Views/styles.css"
+    <link rel="stylesheet" href="/dynamicCityViews/styles.css"
   </head>
   <body>
-    <script src="/task13Views/script.js"></script>
+    <script src="/dynamicCityViews/script.js"></script>
   </body>
 </html>
