changed name of task16 folders

--- a/views/authViews/dashboard.ejs
+++ b/views/authViews/dashboard.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="/task16Views/styles.css" />
+    <link rel="stylesheet" href="/authViews/styles.css" />
   </head>
   <body>
     <p class="logout" onclick="logout()">Logout</p>
