--- a/views/authViews/forgotPasswordPage.ejs
+++ b/views/authViews/forgotPasswordPage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forgot Password</title>
-    <link rel="stylesheet" href="/task16Views/styles.css" />
+    <link rel="stylesheet" href="/authViews/styles.css" />
   </head>
   <body>
     <div class="forgot-password-div">
@@ -21,6 +21,6 @@
       <br />
       <span class="verify-button" onclick="forgotPassword()">Verify</span>
     </div>
-    <script src="/task16Views/script.js"></script>
+    <script src="/authViews/script.js"></script>
   </body>
 </html>
