--- a/views/authViews/register.ejs
+++ b/views/authViews/register.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="/task16Views/styles.css" />
+    <link rel="stylesheet" href="/authViews/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
@@ -70,6 +70,6 @@
       <span class="submit-button" onclick="register()">Create Account</span>
       <p class="already-user">Already a user?<a href="/login">Login</a></p>
     </form>
-    <script src="/task16Views/script.js"></script>
+    <script src="/authViews/script.js"></script>
   </body>
 </html>
