--- a/views/ticTacToeViews/task3.ejs
+++ b/views/ticTacToeViews/task3.ejs
@@ -28,7 +28,12 @@
         margin: 0 auto;
         margin-top: -20px;
         margin-bottom: 40px;
-        color: red;
+        color: green;
+    }
+    #result {
+        margin-top: -40px;
+        margin-bottom: 60px;
+        margin-left: 530px;
     }
 </style>
 
@@ -53,7 +58,7 @@
                 <td id="td9" onclick="playGame(9)"></td>
             </tr>
         </table>
-        <p id="winner"></p>
+        <p id="result">Game Result: <span id="winner"></span></p>
         <button onclick="restartGame()">Restart the game</button>
         <script>
             var count = 0;
