--- a/views/attendanceReportViews/errorPage.ejs
+++ b/views/attendanceReportViews/errorPage.ejs
@@ -8,6 +8,6 @@
   <body>
     <h2>Oops....</h2>
     <p><%=message%></p>
-    <a href="/result"><button>Go to result page</button></a>
+    <a href="/task5/result"><button>Go to result page</button></a>
   </body>
 </html>
