--- a/views/kukuKubeViews/task2.ejs
+++ b/views/kukuKubeViews/task2.ejs
@@ -35,17 +35,18 @@
       color: black;
     }
   </style>
-  <body onload="timer()">
+  <body>
     <h2 align="center">Vansh Gandhi &nbsp; 24DEV071 &nbsp; 02/02/2024</h2>
     <div class="container">
       <span id="score"></span>
       <span id="score2"></span>
       <span id="btn1">0</span>
 
+      <input type="button" value="start" id="start" onclick="timer()" />
       <input type="button" value="pause" id="pause" />
     </div>
 
-    <table border="1" cellspacing="0" cellpadding="0" id="table">
+    <table border="1" style="display: none" cellspacing="0" cellpadding="0" id="table">
       <tr>
         <td id="td1" onclick="myFun()"></td>
         <td id="td2"></td>
@@ -67,14 +68,16 @@
 
         let table1 = document.getElementById("table");
         let a = table1.rows.length;
-        let row = table.insertRow(a);
-        let cell = table1.rows[0].cells.length;
-        for (var i = 0; i < cell; i++) {
-          var cell_plus = row.insertCell(i);
-        }
+        if (a < 7) {
+          let row = table.insertRow(a);
+          let cell = table1.rows[0].cells.length;
+          for (var i = 0; i < cell; i++) {
+            var cell_plus = row.insertCell(i);
+          }
 
-        for (var j = 0; j < table1.rows.length; j++) {
-          let column = table1.rows[j].insertCell(cell);
+          for (var j = 0; j < table1.rows.length; j++) {
+            let column = table1.rows[j].insertCell(cell);
+          }
         }
 
         var total = table1.rows.length * table1.rows[0].cells.length;
@@ -101,11 +104,15 @@
 
       function timer() {
         var sec = 10;
+        let table = document.getElementById("table");
+        table.style.display = "inline-block";
+        table.style.marginLeft = "500px";
         var timer = setInterval(function () {
           document.getElementById("btn1").innerHTML = "00:" + sec;
           sec--;
           if (sec < 0) {
-            alert("Game Over");
+            console.log(count);
+            alert("Your Score is: " + count);
             clearInterval(timer);
             window.location.reload();
           }
